// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayPaginationBar should render a ClayPaginationBar with baseHref 1`] = `
<div class="clay-pagination-bar pagination-bar">
  <div class="dropdown pagination-items-per-page">
    <button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" type="button">10 items
      <svg class="lexicon-icon lexicon-icon-caret-bottom inline-item inline-item-after" focusable="false" role="presentation">
        <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#caret-bottom"></use>
      </svg>
    </button>
  </div>
  <div class="pagination-results">showing-1-to-10-of-20-entries</div>
  <ul class="clay-pagination pagination">
    <li class="page-item disabled">
      <a aria-label="previous-page" class=" page-link" href="#mySite?curPage=">
        <svg class="lexicon-icon lexicon-icon-angle-left" focusable="false" role="presentation">
          <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#angle-left"></use>
        </svg>
      </a>
    </li>
    <li class="page-item active" data-page="1">
      <a class=" page-link" href="#mySite?curPage=1">1</a>
    </li>
    <li class="page-item" data-page="2">
      <a class=" page-link" href="#mySite?curPage=2">2</a>
    </li>
    <li class="page-item" data-page="2">
      <a aria-label="next-page" class=" page-link" href="#mySite?curPage=2">
        <svg class="lexicon-icon lexicon-icon-angle-right" focusable="false" role="presentation">
          <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#angle-right"></use>
        </svg>
      </a>
    </li>
  </ul>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1">
      <a class=" dropdown-item" href="#mySite?entries=5">5</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item active" href="#mySite?entries=10">10</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#mySite?entries=15">15</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#mySite?entries=20">20</a>
    </li>
  </ul>
</div>
`;

exports[`ClayPaginationBar should render a ClayPaginationBar with classes 1`] = `
<div class="clay-pagination-bar pagination-bar my-custom-class">
  <div class="dropdown pagination-items-per-page">
    <button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" type="button">10 items
      <svg class="lexicon-icon lexicon-icon-caret-bottom inline-item inline-item-after" focusable="false" role="presentation">
        <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#caret-bottom"></use>
      </svg>
    </button>
  </div>
  <div class="pagination-results">showing-1-to-10-of-20-entries</div>
  <ul class="clay-pagination pagination">
    <li class="page-item disabled">
      <a aria-label="previous-page" class=" page-link" href="#">
        <svg class="lexicon-icon lexicon-icon-angle-left" focusable="false" role="presentation">
          <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#angle-left"></use>
        </svg>
      </a>
    </li>
    <li class="page-item active" data-page="1">
      <a class=" page-link" href="#1">1</a>
    </li>
    <li class="page-item" data-page="2">
      <a class=" page-link" href="#2">2</a>
    </li>
    <li class="page-item" data-page="2">
      <a aria-label="next-page" class=" page-link" href="#2">
        <svg class="lexicon-icon lexicon-icon-angle-right" focusable="false" role="presentation">
          <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#angle-right"></use>
        </svg>
      </a>
    </li>
  </ul>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1">
      <a class=" dropdown-item" href="#mySite?entries=5">5</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item active" href="#mySite?entries=10">10</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#mySite?entries=15">15</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#mySite?entries=20">20</a>
    </li>
  </ul>
</div>
`;

exports[`ClayPaginationBar should render a ClayPaginationBar with id 1`] = `
<div class="clay-pagination-bar pagination-bar" id="myId">
  <div class="dropdown pagination-items-per-page">
    <button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" type="button">10 items
      <svg class="lexicon-icon lexicon-icon-caret-bottom inline-item inline-item-after" focusable="false" role="presentation">
        <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#caret-bottom"></use>
      </svg>
    </button>
  </div>
  <div class="pagination-results">showing-1-to-10-of-20-entries</div>
  <ul class="clay-pagination pagination">
    <li class="page-item disabled">
      <a aria-label="previous-page" class=" page-link" href="#">
        <svg class="lexicon-icon lexicon-icon-angle-left" focusable="false" role="presentation">
          <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#angle-left"></use>
        </svg>
      </a>
    </li>
    <li class="page-item active" data-page="1">
      <a class=" page-link" href="#1">1</a>
    </li>
    <li class="page-item" data-page="2">
      <a class=" page-link" href="#2">2</a>
    </li>
    <li class="page-item" data-page="2">
      <a aria-label="next-page" class=" page-link" href="#2">
        <svg class="lexicon-icon lexicon-icon-angle-right" focusable="false" role="presentation">
          <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#angle-right"></use>
        </svg>
      </a>
    </li>
  </ul>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1">
      <a class=" dropdown-item" href="#mySite?entries=5">5</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item active" href="#mySite?entries=10">10</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#mySite?entries=15">15</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#mySite?entries=20">20</a>
    </li>
  </ul>
</div>
`;

exports[`ClayPaginationBar should render a ClayPaginationBar with one item less than selected entry multiple 1`] = `
<div class="clay-pagination-bar pagination-bar">
  <div class="dropdown pagination-items-per-page">
    <button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" type="button">10 items
      <svg class="lexicon-icon lexicon-icon-caret-bottom inline-item inline-item-after" focusable="false" role="presentation">
        <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#caret-bottom"></use>
      </svg>
    </button>
  </div>
  <div class="pagination-results">showing-11-to-19-of-19-entries</div>
  <ul class="clay-pagination pagination">
    <li class="page-item" data-page="1">
      <a aria-label="previous-page" class=" page-link" href="#mySite?curPage=1">
        <svg class="lexicon-icon lexicon-icon-angle-left" focusable="false" role="presentation">
          <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#angle-left"></use>
        </svg>
      </a>
    </li>
    <li class="page-item" data-page="1">
      <a class=" page-link" href="#mySite?curPage=1">1</a>
    </li>
    <li class="page-item active" data-page="2">
      <a class=" page-link" href="#mySite?curPage=2">2</a>
    </li>
    <li class="page-item disabled">
      <a aria-label="next-page" class=" page-link" href="#mySite?curPage=">
        <svg class="lexicon-icon lexicon-icon-angle-right" focusable="false" role="presentation">
          <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#angle-right"></use>
        </svg>
      </a>
    </li>
  </ul>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1">
      <a class=" dropdown-item" href="#mySite?entries=5">5</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item active" href="#mySite?entries=10">10</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#mySite?entries=15">15</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#mySite?entries=20">20</a>
    </li>
  </ul>
</div>
`;

exports[`ClayPaginationBar should render a ClayPaginationBar with one item more than selected entry multiple 1`] = `
<div class="clay-pagination-bar pagination-bar">
  <div class="dropdown pagination-items-per-page">
    <button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" type="button">10 items
      <svg class="lexicon-icon lexicon-icon-caret-bottom inline-item inline-item-after" focusable="false" role="presentation">
        <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#caret-bottom"></use>
      </svg>
    </button>
  </div>
  <div class="pagination-results">showing-11-to-20-of-21-entries</div>
  <ul class="clay-pagination pagination">
    <li class="page-item" data-page="1">
      <a aria-label="previous-page" class=" page-link" href="#mySite?curPage=1">
        <svg class="lexicon-icon lexicon-icon-angle-left" focusable="false" role="presentation">
          <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#angle-left"></use>
        </svg>
      </a>
    </li>
    <li class="page-item" data-page="1">
      <a class=" page-link" href="#mySite?curPage=1">1</a>
    </li>
    <li class="page-item active" data-page="2">
      <a class=" page-link" href="#mySite?curPage=2">2</a>
    </li>
    <li class="page-item" data-page="3">
      <a class=" page-link" href="#mySite?curPage=3">3</a>
    </li>
    <li class="page-item" data-page="3">
      <a aria-label="next-page" class=" page-link" href="#mySite?curPage=3">
        <svg class="lexicon-icon lexicon-icon-angle-right" focusable="false" role="presentation">
          <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#angle-right"></use>
        </svg>
      </a>
    </li>
  </ul>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1">
      <a class=" dropdown-item" href="#mySite?entries=5">5</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item active" href="#mySite?entries=10">10</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#mySite?entries=15">15</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#mySite?entries=20">20</a>
    </li>
  </ul>
</div>
`;

exports[`ClayPaginationBar should render a ClayPaginationBar with one item more than selected entry multiple 2`] = `
<div class="clay-pagination-bar pagination-bar">
  <div class="dropdown pagination-items-per-page">
    <button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" type="button">10 items
      <svg class="lexicon-icon lexicon-icon-caret-bottom inline-item inline-item-after" focusable="false" role="presentation">
        <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#caret-bottom"></use>
      </svg>
    </button>
  </div>
  <div class="pagination-results">showing-21-to-21-of-21-entries</div>
  <ul class="clay-pagination pagination">
    <li class="page-item" data-page="2">
      <a aria-label="previous-page" class=" page-link" href="#mySite?curPage=2">
        <svg class="lexicon-icon lexicon-icon-angle-left" focusable="false" role="presentation">
          <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#angle-left"></use>
        </svg>
      </a>
    </li>
    <li class="page-item" data-page="1">
      <a class=" page-link" href="#mySite?curPage=1">1</a>
    </li>
    <li class="page-item" data-page="2">
      <a class=" page-link" href="#mySite?curPage=2">2</a>
    </li>
    <li class="page-item active" data-page="3">
      <a class=" page-link" href="#mySite?curPage=3">3</a>
    </li>
    <li class="page-item disabled">
      <a aria-label="next-page" class=" page-link" href="#mySite?curPage=">
        <svg class="lexicon-icon lexicon-icon-angle-right" focusable="false" role="presentation">
          <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#angle-right"></use>
        </svg>
      </a>
    </li>
  </ul>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1">
      <a class=" dropdown-item" href="#mySite?entries=5">5</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item active" href="#mySite?entries=10">10</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#mySite?entries=15">15</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#mySite?entries=20">20</a>
    </li>
  </ul>
</div>
`;

exports[`ClayPaginationBar should render the default markup 1`] = `
<div class="clay-pagination-bar pagination-bar">
  <div class="dropdown pagination-items-per-page">
    <button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" type="button">10 items
      <svg class="lexicon-icon lexicon-icon-caret-bottom inline-item inline-item-after" focusable="false" role="presentation">
        <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#caret-bottom"></use>
      </svg>
    </button>
  </div>
  <div class="pagination-results">showing-1-to-10-of-20-entries</div>
  <ul class="clay-pagination pagination">
    <li class="page-item disabled">
      <a aria-label="previous-page" class=" page-link" href="#mySite?curPage=">
        <svg class="lexicon-icon lexicon-icon-angle-left" focusable="false" role="presentation">
          <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#angle-left"></use>
        </svg>
      </a>
    </li>
    <li class="page-item active" data-page="1">
      <a class=" page-link" href="#mySite?curPage=1">1</a>
    </li>
    <li class="page-item" data-page="2">
      <a class=" page-link" href="#mySite?curPage=2">2</a>
    </li>
    <li class="page-item" data-page="2">
      <a aria-label="next-page" class=" page-link" href="#mySite?curPage=2">
        <svg class="lexicon-icon lexicon-icon-angle-right" focusable="false" role="presentation">
          <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#angle-right"></use>
        </svg>
      </a>
    </li>
  </ul>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1">
      <a class=" dropdown-item" href="#mySite?entries=5">5</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item active" href="#mySite?entries=10">10</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#mySite?entries=15">15</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#mySite?entries=20">20</a>
    </li>
  </ul>
</div>
`;
